# incentives-distribution

./: .gitignore  README.md
scrypto/: Cargo.toml
scrypto/dummy_account/: Cargo.toml
scrypto/dummy_account/src/: lib.rs
scrypto/src/: lib.rs
scrypto/tests/: helper.rs  lib.rs
